--- a/POM.xml
+++ b/POM.xml
@@ -3,6 +3,7 @@
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
   <version>1</version>
+  <packaging>war</packaging>
   <build>
 	<plugins>
 		
