--- a/POM.xml
+++ b/POM.xml
@@ -4,4 +4,7 @@
   <artifactId>my-app</artifactId>
   <version>1</version>
   <packaging>war</packaging>
+  <properties>
+    <failOnMissingWebXml>false</failOnMissingWebXml>  
+  </properties>
 </project>
