--- a/POM.xml
+++ b/POM.xml
@@ -4,7 +4,11 @@
   <artifactId>my-app</artifactId>
   <version>1</version>
   <packaging>war</packaging>
-  <properties>
-    <failOnMissingWebXml>false</failOnMissingWebXml>  
-  </properties>
+  <plugin>
+    <artifactId>maven-war-plugin</artifactId>
+    <version>2.6</version>
+    <configuration>
+      <failOnMissingWebXml>false</failOnMissingWebXml>
+    </configuration>
+  </plugin>
 </project>
