--- a/POM.xml
+++ b/POM.xml
@@ -16,5 +16,6 @@
   </build>
   <groupId>com.mycompany.app</groupId>
   <artifactId>my-app</artifactId>
-  <version>1</version>
+  <version>2</version>
+  <packaging>war</packaging>
 </project>
